# rget

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: cache.rs  main.rs
tests/: integration_test.rs
