[package]
name = "rget"
version = "0.1.0"
edition = "2021"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
description = "Cached downloads"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.34"
futures = "0.3.31"
reqwest = { version = "0.12.8", features = ["stream"] }
tar = "0.4.42"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "thin"
