[package]
name = "rget"
version = "0.1.0"
edition = "2021"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
description = "Cached downloads"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
flate2 = "1.0.34"
fork_stream = "0.1.0"
futures = "0.3.31"
indicatif = { version = "0.17.9", features = ["tokio"] }
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tar = "0.4.42"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "thin"

[dev-dependencies]
axum = "0.7.9"
tempfile = "3.14.0"
